simplified library usage by not having to specify action class in the decorator

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
         "node_modules/@types"
       ],
       "types": [
-        "node"
+        "node",
+        "reflect-metadata"
       ],
       "lib": [
         "es2017",
