--- a/example-app/package.json
+++ b/example-app/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.5.2",
+    "typed-reducer": "0.0.3",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
