--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typed-reducer",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Framework-agnostic and class-based typed reducers",
   "main": "index.js",
   "scripts": {
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@types/node": "^8.0.51",
+    "@types/reflect-metadata": "0.0.5",
     "typescript": "^2.6.1"
   },
   "files": [
